--- a/ExpenseTracker.Web/Pages/Auth/Login.cshtml
+++ b/ExpenseTracker.Web/Pages/Auth/Login.cshtml
@@ -1,17 +1,14 @@
 ﻿@page
 @model ExpenseTracker.Web.Pages.Auth.LoginModel
-@{
-    ViewData["Title"] = "Вхід";
-}
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"]</title>
+    <title>Вхід</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
-<div class="min-h-screen flex items-center justify-center bg-gray-100 bg-cover bg-center" style="background-image: url('/img/background-image.jpg')">
+<div class="min-h-screen flex items-center justify-center bg-gray-100 bg-cover bg-center">
     <div class="bg-white bg-opacity-90 p-6 rounded-lg shadow-xl w-full max-w-md">
         <h2 class="text-2xl font-semibold text-gray-900 mb-6 text-center">Вхід</h2>
         <form method="post" class="space-y-4">
